SFDC_LD_Packages/objects-layouts/main/default/objects/Quote/fields/Additional_Terms__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms__c</fullName>
    <description>If Additional Terms are added contractually</description>
    <label>Additional Terms</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>