SFDC_LD_Packages/objects-layouts/main/default/objects/Quote/fields/Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renew__c</fullName>
    <description>is the auto renewal turned off?</description>
    <label>Auto Renew?</label>
    <length>225</length>
    <type>Text</type>
</CustomField>