SFDC_LD_Packages/objects-layouts/main/default/objects/Quote/fields/Billing_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Email__c</fullName>
    <label>Billing Contact Email</label>
    <type>Email</type>
</CustomField>