SFDC_LD_Packages/objects-layouts/main/default/objects/Quote/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <label>Billing Frequency</label>
    <length>225</length>
    <type>Text</type>
</CustomField>