SFDC_LD_Packages/objects-layouts/main/default/objects/Quote/fields/CPQ_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Transaction_Type__c</fullName>
    <label>CPQ Transaction Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>