SFDC_LD_Packages/objects-layouts/main/default/objects/Quote/fields/Dealhub_Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Dealhub_Quote_ID__c</fullName>
    <label>Dealhub_Quote_ID</label>
    <length>225</length>
    <type>Text</type>
</CustomField>