SFDC_LD_Packages/objects-layouts/main/default/objects/Quote/fields/Is_this_a_reseller__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_reseller__c</fullName>
    <label>Is this a reseller?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>