SFDC_LD_Packages/objects-layouts/main/default/objects/Quote/fields/Legal_MSA_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_MSA_Name__c</fullName>
    <description>This field is Read Only, and can only be modified inside CPQ.</description>
    <label>Legal MSA Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>