SFDC_LD_Packages/objects-layouts/main/default/objects/Quote/fields/Logo_Rights__c.field-meta.xml
<CustomField>
    <fullName>Logo_Rights__c</fullName>
    <label>Logo Rights</label>
    <length>255</length>
    <type>Text</type>
</CustomField>