SFDC_LD_Packages/objects-layouts/main/default/objects/Quote/fields/Opportunity_ARR__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ARR__c</fullName>
    <label>Opportunity ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>