SFDC_LD_Packages/objects-layouts/main/default/objects/Quote/fields/Order_Source__c.field-meta.xml
<CustomField>
    <fullName>Order_Source__c</fullName>
    <label>Order Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DealHub</fullName>
            </value>
            <value>
                <fullName>Manual Order Form</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>NA - Churn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>