SFDC_LD_Packages/objects-layouts/main/default/objects/Quote/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <length>225</length>
    <type>Text</type>
</CustomField>