SFDC_LD_Packages/objects-layouts/main/default/objects/Quote/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <length>225</length>
    <type>Text</type>
</CustomField>