SFDC_LD_Packages/objects-layouts/main/default/objects/Quote/fields/PO_Required__c.field-meta.xml
<CustomField>
    <fullName>PO_Required__c</fullName>
    <label>PO Required</label>
    <length>12</length>
    <type>Text</type>
</CustomField>