SFDC_LD_Packages/objects-layouts/main/default/objects/Quote/fields/Price_Hold__c.field-meta.xml
<CustomField>
    <fullName>Price_Hold__c</fullName>
    <inlineHelpText>Indicates whether the deal has a price hold from DealHub.</inlineHelpText>
    <label>Price Hold</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>