SFDC_LD_Packages/objects-layouts/main/default/objects/Quote/fields/Price_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Price_Hold_Reason__c</fullName>
    <label>Price Hold Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>