SFDC_LD_Packages/objects-layouts/main/default/objects/Quote/fields/Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_Status__c</fullName>
    <label>Quote Status</label>
    <length>225</length>
    <type>Text</type>
</CustomField>