SFDC_LD_Packages/objects-layouts/main/default/objects/Quote/fields/Redlined_MSA__c.field-meta.xml
<CustomField>
    <fullName>Redlined_MSA__c</fullName>
    <description>If the customer is using a Redlined MSA, this field should indicate as such</description>
    <label>Redlined MSA</label>
    <length>225</length>
    <type>Text</type>
</CustomField>