SFDC_LD_Packages/objects-layouts/main/default/objects/Quote/fields/Reseller_Name__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Name__c</fullName>
    <label>Reseller Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>