SFDC_LD_Packages/objects-layouts/main/default/objects/Quote/fields/Signer_Name__c.field-meta.xml
<CustomField>
    <fullName>Signer_Name__c</fullName>
    <label>Signer</label>
    <length>225</length>
    <type>Text</type>
</CustomField>