SFDC_LD_Packages/objects-layouts/main/default/objects/Quote/fields/Signer_Title__c.field-meta.xml
<CustomField>
    <fullName>Signer_Title__c</fullName>
    <label>Signer Title</label>
    <length>225</length>
    <type>Text</type>
</CustomField>